--- a/sales.html
+++ b/sales.html
@@ -17,24 +17,12 @@
   </header>
   <main>
 
-    <ul id="seattle">
-      <h2>Seattle</h2>
-    </ul>
-    <ul id="tokyo">
-      <h2>Tokyo</h2>
-    </ul>
-    <ul id="dubai">
-      <h2>Dubai</h2>
-    </ul>
-    <ul id="paris">
-      <h2>Paris</h2>
-    </ul>
-    <ul id="lima">
-      <h2>Lima</h2>
-    </ul>
+    <table id="table">
 
+    </table>
 
   </main>
+  <!-- <script src="js/app.js"></script> -->
   <script src="js/app.js"></script>
 </body>
 
