structure of inex.html and styling of css, fixed some js logixc

--- a/index.html
+++ b/index.html
@@ -5,19 +5,127 @@
   <title>Cookie Stand</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header>
-    <h1> Salmon Cookies</h1>
-    <a href="sales.html">Sales</a>
+
+
+    <wrapper>
+      <div>
+        <h1><a href="index.html">Pat's Salmon Cookies </a></h1>
+      </div>
+      <nav>
+        <span><a href="sales.html">Sales</a></span>
+        <span><a href="#">Store</a></span>
+        <span><a href="#">Order Processing</a></span>
+      </nav>
+      <ul>
+        <li>Hours: 24/7</li>
+        <li>Address: 555 Salmon Way, Seattle, Wa</li>
+        <li>Contact: (206)772-5666</li>
+      </ul>
+
+    </wrapper>
+
   </header>
   <main>
-    <!-- content goes here -->
+
+    <img src="img/salmon.png" />
+    <h2>Mission Statement</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium sed quia nemo molestiae, sint itaque
+      voluptate nisi ipsum, amet reiciendis consequatur minima. Unde sit molestiae nemo ipsam nisi sapiente quo
+      provident. Provident tempora earum dolor mollitia tempore, minima maiores illum magni. Nesciunt nobis tempora
+      sunt, cumque accusamus maxime consequatur deserunt.
+    </p>
+
   </main>
-  <script src="js/app.js"></script>
+
+  <section>
+
+    <img src="img/family.jpg" />
+
+    <article>
+
+      <h2>The Tastiest of Cookies</h2>
+
+      <p> Salmon Cookies so good your family won't be able to just eat just one. Lorem ipsum dolor sit, amet consectetur
+        adipisicing elit. Unde iure quo, autem hic quidem aperiam. Quo ipsum quis iste nisi ab perspiciatis recusandae
+        temporibus nobis voluptate cumque, libero quisquam? Ipsum minus sint aspernatur fuga magni eos est expedita
+        dolor, tempora itaque pariatur rem laborum voluptas, harum atque, velit nemo animi quibusdam quidem deleniti
+        fugiat esse? Eum distinctio veritatis ab, labore, dolorum officia dignissimos, pariatur soluta repellendus quae
+        vel impedit fugiat. Veniam fuga tenetur reiciendis laboriosam et corporis assumenda officiis natus? Quod soluta
+        veniam quis sapiente earum eum accusantium qui eaque fugiat. Obcaecati ea quibusdam, porro illo numquam sed
+        sapiente corrupti!</p>
+
+    </article>
+
+
+  </section>
+
+  <section>
+
+    <h2> Visit Our Store</h2>
+
+    <wrapper>
+      <div>
+        <img src="img/frosted-cookie.jpg" alt="">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt, ullam sapiente quo nostrum eos harum,
+          possimus tempora enim quas sit iste soluta, ratione voluptatum.
+
+        </p>
+      </div>
+      <div>
+        <img src="img/shirt.jpg" alt="">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi cumque fuga, dignissimos ex quis
+          aspernatur
+          laborum rerum cum amet, quaerat quo, quos dicta quam unde nam?</p>
+      </div>
+      <div>
+        <img src="img/cutter.jpeg" alt="">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente ab omnis, obcaecati ratione porro
+          voluptatibus nemo rem quis fuga illo consectetur odio illum, reiciendis delectus non, voluptas sunt sint
+          eveniet!</p>
+      </div>
+      <div>
+        <img src="img/fish.jpg" alt="">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente ab omnis, obcaecati ratione porro
+          voluptatibus nemo rem quis fuga illo consectetur odio illum, reiciendis delectus non, voluptas sunt sint
+          eveniet!</p>
+      </div>
+      <div>
+        <img src="img/chinook.jpg" alt="">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente ab omnis, obcaecati ratione porro
+          voluptatibus nemo rem quis fuga illo consectetur odio illum, reiciendis delectus non, voluptas sunt sint
+          eveniet!</p>
+      </div>
+    </wrapper>
+
+
+
+
+    <!--     <article>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi sed excepturi tempora sint iusto eaque
+        asperiores
+        quam, dolorem ipsum quia distinctio similique itaque est sunt nesciunt quaerat unde nobis. Odio quibusdam
+        autem
+        consequuntur minus placeat aperiam laudantium vitae laboriosam odit? Consequatur, itaque quas ea veritatis
+        architecto iusto cumque quia quo!</p>
+
+    </article> -->
+
+  </section>
+
+  <footer></footer>
+  <!-- <script src="js/app.js"></script> -->
 </body>
 
 </html>
