--- a/sales.html
+++ b/sales.html
@@ -13,7 +13,25 @@
 
 <body>
   <header>
-    <h1> Sales</h1>
+
+
+    <wrapper>
+      <div>
+        <h1><a href="index.html">Pat's Salmon Cookies </a></h1>
+      </div>
+      <nav>
+        <span><a href="sales.html">Sales</a></span>
+        <span><a href="#">Store</a></span>
+        <span><a href="#">Order Processing</a></span>
+      </nav>
+      <ul>
+        <li>Hours: 24/7</li>
+        <li>Address: 555 Salmon Way, Seattle, Wa</li>
+        <li>Contact: (206)772-5666</li>
+      </ul>
+
+    </wrapper>
+
   </header>
   <main>
 
@@ -22,7 +40,7 @@
     </table>
 
   </main>
-  <!-- <script src="js/app.js"></script> -->
+  <footer></footer>
   <script src="js/app.js"></script>
 </body>
 
