--- a/sales.html
+++ b/sales.html
@@ -35,6 +35,33 @@
   </header>
   <main>
 
+    <form id="form">
+      <fieldset>
+        <legend> Enter Store Data </legend>
+
+        <label> Store Name:
+          <input type="text" name="name" placeholder="ex. store name">
+        </label>
+
+
+        <label> Min customer per day:
+          <input type="text" name="min" placeholder="12">
+        </label>
+
+        <label> Max customer per day:
+          <input type="text" name="max" placeholder="60">
+        </label>
+
+        <label for="avg"> Enter avg cookie bought per customer:
+          <input type="text" name="avg" placeholder="4.2">
+        </label>
+
+        <button type="submit"> Submit </button>
+
+      </fieldset>
+
+    </form>
+
     <table id="table">
 
     </table>
