--- a/sales.html
+++ b/sales.html
@@ -40,20 +40,20 @@
         <legend> Enter Store Data </legend>
 
         <label> Store Name:
-          <input type="text" name="name" placeholder="ex. store name">
+          <input type="text" name="name" placeholder="ex. store name" type="number">
         </label>
 
 
         <label> Min customer per day:
-          <input type="text" name="min" placeholder="12">
+          <input type="text" name="min" placeholder="12" type="number">
         </label>
 
         <label> Max customer per day:
-          <input type="text" name="max" placeholder="60">
+          <input type="text" name="max" placeholder="60" type="number">
         </label>
 
         <label for="avg"> Enter avg cookie bought per customer:
-          <input type="text" name="avg" placeholder="4.2">
+          <input type="text" name="avg" placeholder="4.2" type="float">
         </label>
 
         <button type="submit"> Submit </button>
